@@ -23,11 +23,14 @@ import static io.streamthoughts.jikkou.api.control.ChangeType.DELETE;
 import static io.streamthoughts.jikkou.api.control.ChangeType.NONE;
 import static io.streamthoughts.jikkou.api.control.ChangeType.UPDATE;
 
+import io.streamthoughts.jikkou.JikkouMetadataAnnotations;
 import io.streamthoughts.jikkou.api.model.ConfigValue;
 import io.streamthoughts.jikkou.api.model.Configs;
+import io.streamthoughts.jikkou.api.model.ObjectMeta;
 import io.streamthoughts.jikkou.kafka.adapters.KafkaConfigsAdapter;
-import io.streamthoughts.jikkou.kafka.internals.KafkaConstants;
-import io.streamthoughts.jikkou.kafka.models.V1KafkaTopicObject;
+import io.streamthoughts.jikkou.kafka.internals.KafkaTopics;
+import io.streamthoughts.jikkou.kafka.models.V1KafkaTopic;
+import io.streamthoughts.jikkou.kafka.models.V1KafkaTopicSpec;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -37,309 +40,344 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 
-public class TopicChangeComputerTest {
-    
+class TopicChangeComputerTest {
+
     public static final String CONFIG_PROP = "config.prop";
     public static final String TEST_TOPIC = "Test";
 
-    public static final KafkaTopicReconciliationConfig DEFAULT_TOPIC_CHANGE_OPTIONS = new KafkaTopicReconciliationConfig();
+    public static final String ANY_VALUE = "???";
 
     @Test
-    public void should_not_return_delete_changes_for_internal_topics_given_delete_topic_orphans_options_true() {
-
-        // Given
-        var topic = V1KafkaTopicObject.builder()
-                .withName("__consumer_offsets")
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(Configs.empty())
+    void shouldNotReturnDeleteChangesForTopicDeleteFalse() {
+        // GIVEN
+        var topic = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .withAnnotation(JikkouMetadataAnnotations.JIKKOU_IO_DELETE, false)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .withConfigs(Configs.empty())
+                        .build())
                 .build();
 
-        List<V1KafkaTopicObject> actualState = List.of(topic);
-        List<V1KafkaTopicObject> expectedState  = Collections.emptyList();
-        KafkaTopicReconciliationConfig options = DEFAULT_TOPIC_CHANGE_OPTIONS.withDeleteTopicOrphans(true);
+        List<V1KafkaTopic> actualState = List.of(topic);
+        List<V1KafkaTopic> expectedState = Collections.emptyList();
 
-        // When
+        // WHEN
         var changes = new TopicChangeComputer()
-                .computeChanges(actualState, expectedState, options)
+                .computeChanges(actualState, expectedState)
                 .stream()
-                .collect(Collectors.toMap(TopicChange::getKey, it -> it));
+                .collect(Collectors.toMap(TopicChange::getName, it -> it));
 
-        // Then
+        // THEN
         Assertions.assertTrue(changes.isEmpty());
     }
 
     @Test
-    public void should_return_delete_changes_for_internal_topics_given_delete_topic_orphans_options_true() {
+    void shouldReturnDeleteChangesForExistingTopicDeleteTrue() {
 
-        // Given
-        var topic = V1KafkaTopicObject.builder()
-                .withName("__consumer_offsets")
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(Configs.empty())
+        // GIVEN
+        var topic = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .withAnnotation(JikkouMetadataAnnotations.JIKKOU_IO_DELETE, true)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .withConfigs(Configs.empty())
+                        .build())
                 .build();
 
-        List<V1KafkaTopicObject> actualState = List.of(topic);
-        List<V1KafkaTopicObject> expectedState  = Collections.emptyList();
-        KafkaTopicReconciliationConfig options = DEFAULT_TOPIC_CHANGE_OPTIONS
-                .withDeleteTopicOrphans(true)
-                .withExcludeInternalTopics(false);
+        List<V1KafkaTopic> actualState = List.of(topic);
+        List<V1KafkaTopic> expectedState = List.of(topic);
 
-        // When
+        // WHEN
         var changes = new TopicChangeComputer()
-                .computeChanges(actualState, expectedState, options)
+                .computeChanges(actualState, expectedState)
                 .stream()
-                .collect(Collectors.toMap(TopicChange::getKey, it -> it));
+                .collect(Collectors.toMap(TopicChange::getName, it -> it));
 
-        // Then
-        Assertions.assertFalse(changes.isEmpty());
-        var topicChange = changes.get("__consumer_offsets");
-        Assertions.assertNotNull(topicChange);
-        Assertions.assertEquals(DELETE, topicChange.getChange());
-    }
-
-    @Test
-    public void should_not_return_delete_changes_given_delete_topic_orphans_options_false() {
-
-        // Given
-        var topic = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(Configs.empty())
-                .build();
-
-        List<V1KafkaTopicObject> actualState = List.of(topic);
-        List<V1KafkaTopicObject> expectedState  = Collections.emptyList();
-
-        // When
-        var changes = new TopicChangeComputer()
-                .computeChanges(actualState, expectedState, DEFAULT_TOPIC_CHANGE_OPTIONS.withDeleteTopicOrphans(false))
-                .stream()
-                .collect(Collectors.toMap(TopicChange::getKey, it -> it));
-
-        // Then
-        Assertions.assertTrue(changes.isEmpty());
-    }
-
-    @Test
-    public void should_return_delete_changes_given_delete_topic_orphans_options_true() {
-
-        // Given
-        var topic = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(Configs.empty())
-                .build();
-
-        List<V1KafkaTopicObject> actualState = List.of(topic);
-        List<V1KafkaTopicObject> expectedState  = Collections.emptyList();
-
-        var options = new KafkaTopicReconciliationConfig().withDeleteTopicOrphans(true);
-
-        // When
-        var changes = new TopicChangeComputer()
-                .computeChanges(actualState, expectedState, options)
-                .stream()
-                .collect(Collectors.toMap(TopicChange::getKey, it -> it));
-
-        // Then
+        // THEN
         TopicChange change = changes.get(TEST_TOPIC);
         Assertions.assertNotNull(change);
-        Assertions.assertEquals(DELETE, change.getChange());
+        Assertions.assertEquals(DELETE, change.getChangeType());
         Assertions.assertFalse(change.hasConfigEntryChanges());
     }
 
     @Test
-    public void should_return_add_changes_when_topic_not_exist() {
-        // Given
-        var topic = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(Configs.empty())
+    void shouldReturnNoChangesForNotExistingTopicDeleteTrue() {
+
+        // GIVEN
+        var topic = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .withAnnotation(JikkouMetadataAnnotations.JIKKOU_IO_DELETE, true)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .withConfigs(Configs.empty())
+                        .build())
                 .build();
 
-        List<V1KafkaTopicObject> actualState = Collections.emptyList();
-        List<V1KafkaTopicObject> expectedState  = List.of(topic);
+        List<V1KafkaTopic> actualState = List.of();
+        List<V1KafkaTopic> expectedState = List.of(topic);
 
-        // When
+        // WHEN
         var changes = new TopicChangeComputer()
-                .computeChanges(actualState, expectedState, DEFAULT_TOPIC_CHANGE_OPTIONS)
+                .computeChanges(actualState, expectedState)
                 .stream()
-                .collect(Collectors.toMap(TopicChange::getKey, it -> it));
+                .collect(Collectors.toMap(TopicChange::getName, it -> it));
 
-        // Then
+        // THEN
         TopicChange change = changes.get(TEST_TOPIC);
-        Assertions.assertEquals(ADD, change.getChange());
+        Assertions.assertNull(change);
     }
 
     @Test
-    public void should_return_update_changes_given_topic_with_updated_config_entry() {
+    void shouldReturnChangesWhenTopicDoesNotExist() {
+        // GIVEN
+        var topic = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .withConfigs(Configs.empty())
+                        .build())
+                .build();
+        List<V1KafkaTopic> actualState = Collections.emptyList();
+        List<V1KafkaTopic> expectedState = List.of(topic);
 
-        // Given
+        // WHEN
+        var changes = new TopicChangeComputer()
+                .computeChanges(actualState, expectedState)
+                .stream()
+                .collect(Collectors.toMap(TopicChange::getName, it -> it));
+
+        // THEN
+        TopicChange change = changes.get(TEST_TOPIC);
+        Assertions.assertEquals(ADD, change.getChangeType());
+    }
+
+    @Test
+    void shouldReturnChangesForTopicWithUpdatedConfigEntry() {
+
+        // GIVEN
         Configs actualConfig = Configs.empty();
         actualConfig.add(new ConfigValue(CONFIG_PROP, "actual-value"));
 
-        var topicBefore = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(actualConfig)
+        var topicBefore = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .withConfigs(actualConfig)
+                        .build())
                 .build();
-
-        List<V1KafkaTopicObject> actualState = List.of(topicBefore);
+        List<V1KafkaTopic> actualState = List.of(topicBefore);
 
         Configs expectedConfig = Configs.empty();
         expectedConfig.add(new ConfigValue(CONFIG_PROP, "expected-value"));
 
-        var topicAfter = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(expectedConfig)
+        var topicAfter = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .withConfigs(expectedConfig)
+                        .build())
                 .build();
 
-        List<V1KafkaTopicObject> expectedState  = List.of(topicAfter);
+        List<V1KafkaTopic> expectedState = List.of(topicAfter);
 
-        // When
+        // WHEN
         var changes = new TopicChangeComputer()
-                .computeChanges(actualState, expectedState, new KafkaTopicReconciliationConfig())
+                .computeChanges(actualState, expectedState)
                 .stream()
-                .collect(Collectors.toMap(TopicChange::getKey, it -> it));
+                .collect(Collectors.toMap(TopicChange::getName, it -> it));
 
-        // Then
+        // THEN
         TopicChange change = changes.get(TEST_TOPIC);
-        Assertions.assertEquals(UPDATE, change.getChange());
+        Assertions.assertEquals(UPDATE, change.getChangeType());
         Assertions.assertTrue(change.hasConfigEntryChanges());
 
-        Assertions.assertEquals(UPDATE, change.getConfigs().get(CONFIG_PROP).getChange());
+        Assertions.assertEquals(UPDATE, change.getConfigs().get(CONFIG_PROP).getChangeType());
         Assertions.assertEquals("actual-value", change.getConfigs().get(CONFIG_PROP).getValueChange().getBefore());
         Assertions.assertEquals("expected-value", change.getConfigs().get(CONFIG_PROP).getValueChange().getAfter());
     }
 
     @Test
-    public void should_return_update_changes_given_topic_with_added_config_entry() {
+    void shouldReturnChangesForTopicWithNewConfigEntry() {
 
-        // Given
+        // GIVEN
         Configs actualConfig = Configs.empty();
-        var topicBefore = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(actualConfig)
+        var topicBefore = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .withConfigs(actualConfig)
+                        .build())
                 .build();
 
-        List<V1KafkaTopicObject> actualState = List.of(topicBefore);
+        List<V1KafkaTopic> actualState = List.of(topicBefore);
 
         Configs expectedConfig = Configs.empty();
         expectedConfig.add(new ConfigValue(CONFIG_PROP, "expected-value"));
-
-        var topicAfter = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(expectedConfig)
+        var topicAfter = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .withConfigs(expectedConfig)
+                        .build())
                 .build();
 
-        List<V1KafkaTopicObject> expectedState  = List.of(topicAfter);
+        List<V1KafkaTopic> expectedState = List.of(topicAfter);
 
-        // When
+        // WHEN
         var changes = new TopicChangeComputer()
-                .computeChanges(actualState, expectedState, new KafkaTopicReconciliationConfig())
+                .computeChanges(actualState, expectedState)
                 .stream()
-                .collect(Collectors.toMap(TopicChange::getKey, it -> it));
+                .collect(Collectors.toMap(TopicChange::getName, it -> it));
 
-        // Then
+        // THEN
         TopicChange change = changes.get(TEST_TOPIC);
-        Assertions.assertEquals(UPDATE, change.getChange());
+        Assertions.assertEquals(UPDATE, change.getChangeType());
         Assertions.assertTrue(change.hasConfigEntryChanges());
 
-        Assertions.assertEquals(ADD, change.getConfigs().get(CONFIG_PROP).getChange());
+        Assertions.assertEquals(ADD, change.getConfigs().get(CONFIG_PROP).getChangeType());
         Assertions.assertEquals("expected-value", change.getConfigs().get(CONFIG_PROP).getValueChange().getAfter());
         Assertions.assertNull(change.getConfigs().get(CONFIG_PROP).getValueChange().getBefore());
     }
 
     @Test
-    public void should_return_none_changes_given_identical_topic() {
+    void shouldReturnNoneChangesForEqualTopics() {
 
-        // Given
+        // GIVEN
         Configs configs = Configs.empty();
-        configs.add(new ConfigValue(CONFIG_PROP, "???"));
+        configs.add(new ConfigValue(CONFIG_PROP, ANY_VALUE));
 
-        var topic = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(configs)
+        var topic = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .withConfigs(configs)
+                        .build())
                 .build();
 
+        List<V1KafkaTopic> actualState = List.of(topic);
+        List<V1KafkaTopic> expectedState = List.of(topic);
 
-        List<V1KafkaTopicObject> actualState = List.of(topic);
-        List<V1KafkaTopicObject> expectedState  = List.of(topic);
-
-        // When
+        // WHEN
         var changes = new TopicChangeComputer()
-                .computeChanges(actualState, expectedState, new KafkaTopicReconciliationConfig())
+                .computeChanges(actualState, expectedState)
                 .stream()
-                .collect(Collectors.toMap(TopicChange::getKey, it -> it));
+                .collect(Collectors.toMap(TopicChange::getName, it -> it));
 
-        // Then
+        // THEN
         TopicChange change = changes.get(TEST_TOPIC);
-        Assertions.assertEquals(NONE, change.getChange());
+        Assertions.assertEquals(NONE, change.getChangeType());
         Assertions.assertFalse(change.hasConfigEntryChanges());
 
-        Assertions.assertEquals(NONE, change.getConfigs().get(CONFIG_PROP).getChange());
-        Assertions.assertEquals("???", change.getConfigs().get(CONFIG_PROP).getValueChange().getBefore());
-        Assertions.assertEquals("???", change.getConfigs().get(CONFIG_PROP).getValueChange().getAfter());
+        Assertions.assertEquals(NONE, change.getConfigs().get(CONFIG_PROP).getChangeType());
+        Assertions.assertEquals(ANY_VALUE, change.getConfigs().get(CONFIG_PROP).getValueChange().getBefore());
+        Assertions.assertEquals(ANY_VALUE, change.getConfigs().get(CONFIG_PROP).getValueChange().getAfter());
     }
 
     @Test
-    public void should_return_update_changes_given_topic_with_deleted_config_entry_and_delete_config_orphans_true() {
-        // Given
+    void shouldReturnUpdateChangesForConfigDeleteOrphansTrue() {
+        // GIVEN
         Configs configsBefore = Configs.empty();
 
         configsBefore.add(new ConfigValue(CONFIG_PROP, "orphan", true, true));
-        var topicBefore = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(configsBefore)
+        var topicBefore = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .withConfigs(configsBefore)
+                        .build())
                 .build();
 
-        List<V1KafkaTopicObject> actualState = List.of(topicBefore);
+        List<V1KafkaTopic> actualState = List.of(topicBefore);
 
         Configs configsAfter = Configs.empty();
-        var topicAfter = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(configsAfter)
+        var topicAfter = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .withConfigs(configsAfter)
+                        .build())
                 .build();
 
-        List<V1KafkaTopicObject> expectedState  = List.of(topicAfter);
+        List<V1KafkaTopic> expectedState = List.of(topicAfter);
 
-        // When
-        var changes = new TopicChangeComputer()
-                .computeChanges(actualState, expectedState, DEFAULT_TOPIC_CHANGE_OPTIONS.withDeleteConfigOrphans(true))
+        TopicChangeComputer changeComputer = new TopicChangeComputer(true);
+
+        // WHEN
+
+        var changes = changeComputer
+                .computeChanges(actualState, expectedState)
                 .stream()
-                .collect(Collectors.toMap(TopicChange::getKey, it -> it));
+                .collect(Collectors.toMap(TopicChange::getName, it -> it));
 
-        // Then
+        // THEN
         TopicChange change = changes.get(TEST_TOPIC);
-        Assertions.assertEquals(UPDATE, change.getChange());
+        Assertions.assertEquals(UPDATE, change.getChangeType());
         Assertions.assertTrue(change.hasConfigEntryChanges());
 
-        Assertions.assertEquals(DELETE, change.getConfigs().get(CONFIG_PROP).getChange());
+        Assertions.assertEquals(DELETE, change.getConfigs().get(CONFIG_PROP).getChangeType());
         Assertions.assertEquals("orphan", change.getConfigs().get(CONFIG_PROP).getValueChange().getBefore());
         Assertions.assertNull(change.getConfigs().get(CONFIG_PROP).getValueChange().getAfter());
     }
 
     @Test
-    public void should_return_none_changes_given_topic_with_deleted_config_entry_and_delete_config_orphans_false() {
-        // Given
+    void shouldReturnNoneChangesForConfigDeleteOrphansFalse() {
+        // GIVEN
         Configs configsBefore = Configs.empty();
 
         ConfigEntry mkConfigEntry = Mockito.mock(ConfigEntry.class);
@@ -348,96 +386,136 @@ public class TopicChangeComputerTest {
         Mockito.when(mkConfigEntry.source()).thenReturn(ConfigEntry.ConfigSource.DYNAMIC_BROKER_CONFIG);
 
         configsBefore.add(KafkaConfigsAdapter.of(mkConfigEntry));
-        var topicBefore = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(configsBefore)
+        var topicBefore = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .withConfigs(configsBefore)
+                        .build())
                 .build();
 
-        List<V1KafkaTopicObject> actualState = List.of(topicBefore);
+        List<V1KafkaTopic> actualState = List.of(topicBefore);
 
         Configs configsAfter = Configs.empty();
-        var topicAfter = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
-                .withConfigs(configsAfter)
+        var topicAfter = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .withConfigs(configsAfter)
+                        .build())
                 .build();
+        List<V1KafkaTopic> expectedState = List.of(topicAfter);
 
-        List<V1KafkaTopicObject> expectedState  = List.of(topicAfter);
+        TopicChangeComputer changeComputer = new TopicChangeComputer(false);
 
-        // When
-        Map<String, TopicChange> changes = new TopicChangeComputer()
-                .computeChanges(actualState, expectedState, DEFAULT_TOPIC_CHANGE_OPTIONS.withDeleteConfigOrphans(false))
+        // WHEN
+
+        Map<String, TopicChange> changes = changeComputer
+                .computeChanges(actualState, expectedState)
                 .stream()
-                .collect(Collectors.toMap(TopicChange::getKey, it -> it));
+                .collect(Collectors.toMap(TopicChange::getName, it -> it));
 
-        // Then
+        // THEN
         TopicChange change = changes.get(TEST_TOPIC);
-        Assertions.assertEquals(NONE, change.getChange());
+        Assertions.assertEquals(NONE, change.getChangeType());
         Assertions.assertFalse(change.hasConfigEntryChanges());
     }
 
     @Test
-    public void should_return_none_changes_given_topic_with_default_partitions() {
-        // Given
-        var topicBefore = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
+    void shouldReturnNoneChangesForTopicWithDefaultPartitions() {
+        // GIVEN
+        var topicBefore = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .build())
+                .build();
+        List<V1KafkaTopic> actualState = List.of(topicBefore);
+
+        var topicAfter = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(KafkaTopics.NO_NUM_PARTITIONS)
+                        .withReplicas((short) 1)
+                        .build())
                 .build();
 
-        List<V1KafkaTopicObject> actualState = List.of(topicBefore);
+        List<V1KafkaTopic> expectedState = List.of(topicAfter);
 
-        var topicAfter = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(KafkaConstants.NO_NUM_PARTITIONS)
-                .withReplicationFactor((short)1)
-                .build();
+        TopicChangeComputer changeComputer = new TopicChangeComputer(false);
 
-        List<V1KafkaTopicObject> expectedState  = List.of(topicAfter);
-
-        // When
-        Map<String, TopicChange> changes = new TopicChangeComputer()
-                .computeChanges(actualState, expectedState, DEFAULT_TOPIC_CHANGE_OPTIONS.withDeleteConfigOrphans(false))
+        // WHEN
+        Map<String, TopicChange> changes = changeComputer
+                .computeChanges(actualState, expectedState)
                 .stream()
-                .collect(Collectors.toMap(TopicChange::getKey, it -> it));
+                .collect(Collectors.toMap(TopicChange::getName, it -> it));
 
-        // Then
+        // THEN
         TopicChange change = changes.get(TEST_TOPIC);
-        Assertions.assertEquals(NONE, change.getChange());
+        Assertions.assertEquals(NONE, change.getChangeType());
         Assertions.assertEquals(NONE, change.getPartitions().type());
     }
 
     @Test
-    public void should_return_none_changes_given_topic_with_default_replication() {
-        // Given
-        var topicBefore = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor((short)1)
+    void shouldReturnNoneChangesForTopicWithDefaultReplication() {
+        // GIVEN
+        var topicBefore = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas((short) 1)
+                        .build())
                 .build();
 
-        List<V1KafkaTopicObject> actualState = List.of(topicBefore);
+        List<V1KafkaTopic> actualState = List.of(topicBefore);
 
-        var topicAfter = V1KafkaTopicObject.builder()
-                .withName(TEST_TOPIC)
-                .withPartitions(1)
-                .withReplicationFactor(KafkaConstants.NO_REPLICATION_FACTOR)
+        var topicAfter = V1KafkaTopic.builder()
+                .withMetadata(ObjectMeta.builder()
+                        .withName(TEST_TOPIC)
+                        .build()
+                )
+                .withSpec(V1KafkaTopicSpec
+                        .builder()
+                        .withPartitions(1)
+                        .withReplicas(KafkaTopics.NO_REPLICATION_FACTOR)
+                        .build())
                 .build();
 
-        List<V1KafkaTopicObject> expectedState  = List.of(topicAfter);
+        List<V1KafkaTopic> expectedState = List.of(topicAfter);
+        TopicChangeComputer changeComputer = new TopicChangeComputer(false);
 
-        // When
-        Map<String, TopicChange> changes = new TopicChangeComputer()
-                .computeChanges(actualState, expectedState, DEFAULT_TOPIC_CHANGE_OPTIONS.withDeleteConfigOrphans(false))
+        // WHEN
+        Map<String, TopicChange> changes = changeComputer
+                .computeChanges(actualState, expectedState)
                 .stream()
-                .collect(Collectors.toMap(TopicChange::getKey, it -> it));
+                .collect(Collectors.toMap(TopicChange::getName, it -> it));
 
-        // Then
+        // THEN
         TopicChange change = changes.get(TEST_TOPIC);
-        Assertions.assertEquals(NONE, change.getChange());
-        Assertions.assertEquals(NONE, change.getReplicationFactor().type());
+        Assertions.assertEquals(NONE, change.getChangeType());
+        Assertions.assertEquals(NONE, change.getReplicas().type());
     }
 }
